--- a/style.css
+++ b/style.css
@@ -1,56 +1,31 @@
-.pinkcol{
-    color: pink;
-}
-#greycol{
-    color: gray;
-}
-#redcol{
-    color: red;
-}
-#greencol{
-    color: green;
-}
-.yellowcol{
-    color: yellow;
+:root{
+    --first-color:rgba(212, 40, 83, 0.467);
+    --second-color:#4395d8;
+    --third-color:#48e98b;
 }
 
-.schedule li:hover {
-    background-color: #cfb2b2;
-    
-}
-.schedule li:focus {
-    outline: 2px solid #007BFF;}
-
-.container{
-    width: 80%;
-    background-color: #fff;
-    border-radius: 8px;
- border-color: black;
-}
-h1{
-    text-align: center;
-}
-.monday:first-child{
-    background-color: blueviolet;
-}
-.tuesday:nth-child(2n){
-    background-color: cornflowerblue;
-}
-.wednesday:nth-child(3n){
-    background-color: rgb(50, 221, 184);
-}
-.thursday:nth-child(4n) {
-    background-color: firebrick;
-}
-
-
-.friday:nth-child(5n){
-    background-color: darkcyan;
-}
-.saturday:nth-child(6n){
-    background-color: darkviolet;
-}
-
-.sunday:last-child{ 
-    background-color: hotpink;
-}
+ .square {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+     align-items: center;
+     
+    }
+    .square:nth-child(1) {
+        background-color: var(--first-color);
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
+    .square:nth-child(2) {
+        background-color: #4395d8;
+      top: 40px;
+      left: 50px;
+    ;
+    }
+    .square:nth-child(3) {
+        background-color: #48e98b;
+      top: 100px;
+      left: 100px;  
+      z-index: -1;
+    }
